--- a/SocialNetworkProject_3-22-05/Views/Home/GoChat.cshtml
+++ b/SocialNetworkProject_3-22-05/Views/Home/GoChat.cshtml
@@ -6,9 +6,9 @@
         <div class="col-md-3">
             @foreach (var item in Model.Chats)
             {
-                    var style = "";
-                    if (Model.CurrentReceiver == item.ReceiverId)
-                    {
+                var style = "";
+                if (Model.CurrentReceiver == item.ReceiverId)
+                {
                     style = "background-color:yellow";
                 }
                 <a href="/Home/GoChat/@item.ReceiverId">
@@ -16,7 +16,8 @@
 margin-top:15px;padding:15px;border-radius:15px;@style">
                         <img style="width:70px;height:70px;" alt="avatar" src="\images\@item.Receiver.ImageUrl" />
                         <section style="margin-left:20px;">
-                            <h4>@item.Receiver.UserName</h4>
+                            <h4>
+                                @item.Receiver.UserName
                             @if (item.Receiver.IsOnline)
                             {
                                 <h5 style="color:springgreen"><b>Online</b></h5>
@@ -25,8 +26,16 @@ margin-top:15px;padding:15px;border-radius:15px;@style">
                             {
                                 <h5 style="color:red"><b>Not Available</b></h5>
                             }
+                                <button type="button" class="btn btn-primary position-relative">
+                                    Unread
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                                        @item.UnReadMessageCount
+                                    </span>
+                                </button>
+                            </h4>
                         </section>
                     </div>
+
                 </a>
             }
         </div>
@@ -36,12 +45,12 @@ margin-top:15px;padding:15px;border-radius:15px;@style">
                 @foreach (var message in Model.CurrentChat.Messages)
                 {
 
-                        <section style="display:flex;margin-top:25px;border:2px solid springgreen;
+                    <section style="display:flex;margin-top:25px;border:2px solid springgreen;
 margin-left:0px;border-radius:0 20px 20px 0;padding:20px;width:50%;">
-                            <h5>@message.Content</h5>
-                            <p>@message.DateTime.ToLongDateString()</p>
-                            <p>@message.DateTime.ToLongTimeString()</p>
-                        </section>
+                        <h5>@message.Content</h5>
+                        <p>@message.DateTime.ToLongDateString()</p>
+                        <p>@message.DateTime.ToLongTimeString()</p>
+                    </section>
                 }
             </div>
             <section>
